Fixed layers z-index

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -24,7 +24,7 @@
     border: 0.1rem solid var(--color-highlight-buttons);
     border-bottom-width: 0.5rem;
     overflow: hidden;
-    z-index: 1;
+    z-index: 0;
 
     &::before {
       content: "";
