--- a/src/containers/Header/components/AdaptiveMenu/AdaptiveMenu.module.scss
+++ b/src/containers/Header/components/AdaptiveMenu/AdaptiveMenu.module.scss
@@ -9,7 +9,7 @@
   width: 100vw;
   min-height: 100vh;
   pointer-events: none;
-  z-index: 1;
+  z-index: 2;
 
   &::before {
     content: "";
@@ -46,6 +46,7 @@
   transition-duration: 0.3s;
   transform: translateX(100%);
   overflow-y: scroll;
+  z-index: 2;
 }
 
 .contentVisible {
